<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.varun.csir_trainee.MainActivity"
    android:background="@drawable/csirlogo">

    <TextView
        android:id="@+id/welcome_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arduino_s_data"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />


    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_url">

        <Button
            android:id="@+id/live_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_background"
            android:layout_weight="1"
            android:onClick="get_live_data"
            android:text="@string/get_live_data"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/saved_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_background"
            android:layout_weight="1"
            android:onClick="get_saved_data"
            android:text="@string/get_saved_data"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.70">

        <TextView
            android:id="@+id/url_initial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_url_192_168"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/url_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint=" xxx "
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,TextFields" />

        <TextView
            android:id="@+id/url_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/url_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint=" xxx "
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,TextFields" />

    </LinearLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_background"
        android:onClick="exit"
        android:text="@string/exit"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_background"
        android:onClick="credit"
        android:text="@string/main_credits"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
